--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       left: 0;
       height: 100%;
       width: 100%;
-      background: rgba(15, 32, 39, 0.85);
+      background: rgba(0, 0, 0, 0.75);
+      backdrop-filter: blur(6px);
       z-index: 0;
     }
     header, .container {
@@ -35,67 +36,69 @@
     }
     header {
       text-align: center;
-      padding: 60px 20px 40px;
-      animation: fadeInSlide 1.4s ease-out both;
+      padding: 80px 20px 50px;
+      animation: fadeInSlide 1.2s ease-out both;
     }
     header h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-      background: linear-gradient(90deg, #00c6ff, #0072ff);
+      font-size: 3.5rem;
+      margin-bottom: 12px;
+      background: linear-gradient(90deg, #00ffd0, #0088ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 8px rgba(0, 255, 255, 0.2);
     }
     header p {
-      font-size: 1.2rem;
-      color: #e0f7fa;
+      font-size: 1.3rem;
+      color: #d9f9ff;
       animation: pulseText 3s ease-in-out infinite;
     }
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 30px;
+      gap: 40px;
       padding: 40px;
-      animation: fadeUp 1.6s ease-out both;
+      animation: fadeUp 1.5s ease-out both;
     }
     .tile {
-      background: rgba(255, 255, 255, 0.08);
-      border-radius: 16px;
-      padding: 25px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(12px);
+      background: rgba(255, 255, 255, 0.06);
+      border-radius: 20px;
+      padding: 30px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(18px);
       transition: transform 0.5s ease, box-shadow 0.5s ease;
       cursor: pointer;
       position: relative;
       overflow: hidden;
+      transform-style: preserve-3d;
     }
     .tile:hover {
-      transform: translateY(-10px) scale(1.02);
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5);
+      transform: rotateX(5deg) rotateY(-5deg) scale(1.02);
+      box-shadow: 0 25px 60px rgba(0, 0, 0, 0.6);
     }
     .tile::before {
       content: '';
       position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle, rgba(255,255,255,0.2) 0%, transparent 70%);
-      animation: rotateGlow 10s linear infinite;
+      top: -60%;
+      left: -60%;
+      width: 220%;
+      height: 220%;
+      background: radial-gradient(circle, rgba(255,255,255,0.12) 0%, transparent 70%);
+      animation: rotateGlow 12s linear infinite;
     }
     .tile h2 {
-      color: #90cdf4;
-      margin-bottom: 12px;
+      color: #82dfff;
+      margin-bottom: 14px;
     }
     .tile p {
-      font-size: 0.95rem;
-      line-height: 1.6;
+      font-size: 1rem;
+      line-height: 1.8;
       color: #e2e8f0;
     }
     .hidden {
       display: none;
     }
     a {
-      color: #ffd700;
+      color: #00e6ff;
       text-decoration: none;
     }
     a:hover {
