--- a/index.html
+++ b/index.html
@@ -13,22 +13,11 @@
     }
     body {
       font-family: 'Montserrat', sans-serif;
-      background: url('https://images.unsplash.com/photo-1527689368864-3a821dbccc34?auto=format&fit=crop&w=1470&q=80') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
+      background: linear-gradient(145deg, #0f2027, #203a43, #2c5364);
+      color: #ffffff;
       overflow-x: hidden;
       position: relative;
-    }
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.75);
-      backdrop-filter: blur(6px);
-      z-index: 0;
+      min-height: 100vh;
     }
     header, .container {
       position: relative;
@@ -38,6 +27,10 @@
       text-align: center;
       padding: 80px 20px 50px;
       animation: fadeInSlide 1.2s ease-out both;
+      background: url('https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?auto=format&fit=crop&w=1470&q=80') no-repeat center center;
+      background-size: cover;
+      background-attachment: fixed;
+      border-bottom: 4px solid rgba(255, 255, 255, 0.05);
     }
     header h1 {
       font-size: 3.5rem;
@@ -45,54 +38,54 @@
       background: linear-gradient(90deg, #00ffd0, #0088ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 8px rgba(0, 255, 255, 0.2);
+      text-shadow: 0 0 10px rgba(0, 255, 255, 0.4);
     }
     header p {
       font-size: 1.3rem;
-      color: #d9f9ff;
+      color: #e0ffff;
       animation: pulseText 3s ease-in-out infinite;
     }
     .container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 40px;
-      padding: 40px;
+      padding: 60px;
       animation: fadeUp 1.5s ease-out both;
     }
     .tile {
-      background: rgba(255, 255, 255, 0.06);
+      background: rgba(255, 255, 255, 0.04);
+      border: 1px solid rgba(255, 255, 255, 0.1);
       border-radius: 20px;
       padding: 30px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
-      backdrop-filter: blur(18px);
-      transition: transform 0.5s ease, box-shadow 0.5s ease;
-      cursor: pointer;
+      box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.05), 0 0 30px rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(12px);
+      transition: all 0.4s ease;
       position: relative;
       overflow: hidden;
-      transform-style: preserve-3d;
     }
     .tile:hover {
-      transform: rotateX(5deg) rotateY(-5deg) scale(1.02);
-      box-shadow: 0 25px 60px rgba(0, 0, 0, 0.6);
+      background: rgba(255, 255, 255, 0.07);
+      transform: scale(1.02);
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
     }
     .tile::before {
       content: '';
       position: absolute;
-      top: -60%;
-      left: -60%;
-      width: 220%;
-      height: 220%;
-      background: radial-gradient(circle, rgba(255,255,255,0.12) 0%, transparent 70%);
-      animation: rotateGlow 12s linear infinite;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle at center, rgba(255, 255, 255, 0.05) 0%, transparent 70%);
+      animation: rotateGlow 20s linear infinite;
     }
     .tile h2 {
-      color: #82dfff;
+      color: #87cefa;
       margin-bottom: 14px;
     }
     .tile p {
       font-size: 1rem;
       line-height: 1.8;
-      color: #e2e8f0;
+      color: #e6f1f5;
     }
     .hidden {
       display: none;
@@ -104,7 +97,6 @@
     a:hover {
       text-decoration: underline;
     }
-
     @keyframes fadeInSlide {
       from { opacity: 0; transform: translateY(-30px); }
       to { opacity: 1; transform: translateY(0); }
